[package]
name = "listning-tracker"
version = "0.1.0"
authors = ["meganehouser <sleepy.st818@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rspotify = { version = "0.9"}
tokio = { version = "0.2", features = ["full"] }
dotenv = "0.15.0"
diesel = { version = "1.4.4", features = ["sqlite"] }
anyhow = "1.0.28"
chrono = "^0.4"
env_logger = "0.7.1"
log = "0.4.8"
itertools = "0.9.0"
