[package]
name = "listning-tracker"
version = "0.1.0"
authors = ["meganehouser <sleepy.st818@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rspotify = { version = "0.9"}
tokio = { version = "0.2", features = ["full"] }
dotenv = "0.15.0"
libsqlite3-sys = { version = ">=0.8.0, <0.18.0", features = ["min_sqlite_version_3_7_16", "bundled"] }
diesel = { version = "1.4.4", features = ["sqlite"] }
anyhow = "1.0.28"
chrono = "^0.4"
env_logger = "0.7.1"
log = "0.4.8"
itertools = "0.9.0"
openssl = { version = "0.10", features = ["vendored"] }
