[package]
name = "track-importer"
version = "0.1.0"
authors = ["meganehouser <sleepy.st818@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = "0.23.1"
dotenv = "0.15.0"
log = "0.4.8"
env_logger = "0.7.1"
mongodb = "0.10.0"
anyhow = "1.0.28"
tokio = "0.2.20"
bson = "0.14.1"
serde_json = "1.0.53"
rspotify = "0.9.0"
chrono = "0.4.11"
serde = "1.0.110"
serde_derive = "1.0.110"
